--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Notes</string>
     <string name="add_note_fab">Add note</string>
     <string name="desc_pinned">Pinned</string>
+    <string name="save">save</string>
+    <string name="hint_title">Title</string>
+    <string name="enter_text_hint">Enter text</string>
 </resources>
